# gpu_matrix_mult

./: .gitignore  CMakeLists.txt
include/: cuda_includes.cuh  mat_update.cuh
src/: main.cu  mat_update.cu
